# datacenter_pue

./: .gitignore  README.md  demo.ipynb  pyproject.toml  simulation_funs_DC.py  test.ipynb
data/: datacenter_input_ranges-mod.csv  datacenter_input_ranges.csv
dc_pue/core/: __init__.py  demo.ipynb  simulation_funs_DC.py
dc_pue/core/Simulation Results/: UE.xlsx
