[project]
name = "dc_pue"
version = "0.1.0"
description = "Calculate datacenter PUE and WUE"
authors = [
    {name = "robVerce",email = "Roberto.Vercellino@nrel.gov"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "coolprop (>=6.8.0,<7.0.0)",
    "ruff (>=0.12.4,<0.13.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

